# followalong-axum-full-course

./: Cargo.toml
src/: ctx.rs  error.rs  main.rs  model.rs  web.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
