[package]
name = "axum-full-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.32.0", features = [ "macros", "rt-multi-thread" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
lazy-regex = "2"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"